# TestTaskTODO

./: CMakeLists.txt  README.md  main.cpp  server.cpp  vcpkg.json
ToDoClientWpf/: ToDoClientWpf.sln
ToDoClientWpf/ToDoClientWpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ToDoClientWpf.csproj  ToDoItemViewModel.cs
ToDoClientWpf/ToDoClientWpf/Protos/: todo.proto
